--- a/index.html
+++ b/index.html
@@ -195,12 +195,13 @@
 </html>
 
     <!--#region HTML-Guideline -->
-/*
+<!--
 ================================================================================================================================================================================================================================================================================ 
                                           Better Coding Checklist:
 
--) Emmet snippet Lorem*10 erzeugt 10 Lorem Ipsum Sätze.  
+ Emmet snippet Lorem*10 erzeugt 10 Lorem Ipsum Sätze.  
 
 ==============================================================================================================================================================================================================================================================================================*/
+-->
 
     <!-- #endregion -->
