Game End Sceen + Gameboard size integration I

--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@ todo        -) Comment and Style it
     </footer>
 
     <div class="Class_Settings_Menu" id="ID_Settings_Menu">
-      <span id="ID_Setting_Span">
+      <span id="ID_Setting_Span" data-endscreen="no">
         <div id="ID_Info_Container">
           <h3 id="ID_Info"></h3>
         </div>
         <span id="ID_Gameboard_Span" data-ingame="no">
-          <h3>Gameboard</h3>
+          <h3 id="ID_Gameboard_h">Gameboard</h3>
         <div id="ID_Gameboard_Size_Container">
           <input type="number" name="gameboard_size" id="ID_Gameboard_Size" min="1" max="99" placeholder="1-99" value="7"/>
           <button id="ID_Gameboard_Size_Button"></button>
