Finished complete implementation of Gameboard size feature

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ todo        -) Comment and Style it
         <div id="ID_Info_Container">
           <h3 id="ID_Info"></h3>
         </div>
-        <span id="ID_Gameboard_Span" data-ingame="no">
+        <span id="ID_Gameboard_Span" data-ingame="no" data-gamend="no">
           <h3 id="ID_Gameboard_h">Gameboard</h3>
         <div id="ID_Gameboard_Size_Container">
           <input type="number" name="gameboard_size" id="ID_Gameboard_Size" min="1" max="99" placeholder="1-99" value="7"/>
