Finish Gameboard-Sizing for both directions!

--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@ todo        -) Comment and Style it
         <span id="ID_Gameboard_Span" data-ingame="no" data-gamend="no">
           <h3 id="ID_Gameboard_h"></h3>
         <div id="ID_Gameboard_Size_Container">
-          <input type="number" name="gameboard_size" id="ID_Gameboard_Size" min="1" max="99" placeholder="1-99" value="7"/>
+          <input type="number" name="gameboard_size_x" id="ID_Gameboard_Size_X" min="1" max="14" placeholder="1-14" value="7"/>
+          <input type="number" name="gameboard_size_y" id="ID_Gameboard_Size_Y" min="1" max="14" placeholder="1-14" value="7"/>
+
           <button id="ID_Gameboard_Size_Button"></button>
         </div>
       </span>
@@ -205,7 +207,7 @@ todo        -) Comment and Style it
       type="text/javascript"
       src="Folder_Javascript/domElements.js"
     ></script>
-    <script type="text/javascript" src="Folder_Javascript/library.js"></script>
+    <script type="text/javascript" src="Folder_Javascript/function_library.js"></script>
     <script
       type="text/javascript"
       src="Folder_Javascript/screen_changes.js"
