Settings Menu Style

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@ todo        -) Comment and Style it
               <button id="ID_Gameboard_Size_Button"></button>
             </div>
           </span>
+
+          <span id="ID_Mechanic_Settings">
             <div id="ID_Colour_Container">
               <h3 id="ID_Label_Colour"></h3>
               <div class="Class_Colour_Toggle">
@@ -129,6 +131,7 @@ todo        -) Comment and Style it
                 <option value="English" id="ID_English">English</option>
               </select>
             </div>
+          </span>
             <div id="ID_Stats_Container">
               <h4 id="ID_Stats"></h4>
               <div class="Class_StatsWrapper" id="ID_Stats_First_Wrapper">
