Settings Menu Update

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ todo        -) Comment and Style it
           <button type="button" id="ID_Start_Button" class="Buttons"></button>
         </footer>
 
-        <div class="Class_Settings_Menu" id="ID_Settings_Menu">
+        <div  id="ID_Settings_Menu">
           <span id="ID_Setting_Span" data-endscreen="no">
             <div id="ID_Info_Container">
               <h3 id="ID_Info"></h3>
@@ -106,7 +106,6 @@ todo        -) Comment and Style it
             <div id="ID_Gameboard_Size_Container">
               <input type="number" name="gameboard_size_x" id="ID_Gameboard_Size_X" min="1" max="14" placeholder="1-14" value="7"/>
               <input type="number" name="gameboard_size_y" id="ID_Gameboard_Size_Y" min="1" max="14" placeholder="1-14" value="6"/>
-
               <button id="ID_Gameboard_Size_Button"></button>
             </div>
           </span>
