CSS and JS Cleanout

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ todo        -) Comment and Style it
           <p id="ID_Header_p"></p>
         </header>
 
-        <div class='Class_MainWrapper' id='ID_MainWrapper' data-ingame='no'>
+        <div id='ID_MainWrapper' data-ingame='no'>
           <section class="Class_LeftSidebarWrapper" id="ID_LeftSidebarWrapper">
             <div class="Class_Sidebars">
               <h3 class="Class_Players" id="ID_Player_1_Headline"></h3>
