--- a/index.html
+++ b/index.html
@@ -5,202 +5,208 @@ todo        -) Comment and Style it
 ?-) 
 --><!-- #endregion -->
 <!DOCTYPE html>
-<html lang="de">
+<html lang='en'>
   <head>
-    <title id="ID_Head_Title"></title>
+    <title id='ID_Head_Title'></title>
     <!-- Javascript und CSS Dateieinbindung -->
-    <link rel="stylesheet" type="text/css" href="Folder_CSS/style.css" />
+    <link rel='stylesheet' type='text/css' href='Folder_CSS/style.css' />
     <!-- Favicon & AppleTouch-->
     <link
-      rel="icon"
-      sizes="16x16"
-      href="Folder_Graphics/Folder_Icons/pb_200x200.ico"
+      rel='icon'
+      sizes='16x16'
+      href='Folder_Graphics/Folder_Icons/pb_200x200.ico'
     />
     <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="Folder_Graphics/Folder_Icons/pb_200x200.png"
+      rel='apple-touch-icon'
+      sizes='120x120'
+      href='Folder_Graphics/Folder_Icons/pb_200x200.png'
     />
     <!-- Metadaten  -->
-    <meta name="author" content="Stefan Bartl" />
+    <meta name='author' content='Stefan Bartl' />
     <meta
-      name="description"
-      content='Online-Version of the well knowed family Game "Four-Wins". Play it against friends or KI!'
+      name='description'
+      content='Online-Version of the well knowed family Game 'Four-Wins'. Play it against friends or CPU!'
     />
     <meta
-      name="keywords"
-      content="Game, Browsergame, Spiel, Browserspiel, Four, Four Wins, 4, Vier, 4 Gewinnt"
+      name='keywords'
+      content='Game, Browsergame, Spiel, Browserspiel, Four, Four Wins, 4, Vier, 4 Gewinnt'
     />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1' />
   </head>
 
   <body>
 
-        <header class="Class_HeaderWrapper" id="ID_Header">
-          <h1 class="Class_HeadlineTop" id="ID_Headline"></h1>
-          <p id="ID_Header_p"></p>
+        <header>
+          <h1 id='headline'></h1>
+          <p id='headline_p'></p>
         </header>
 
-        <div id='ID_MainWrapper' data-ingame='no'>
-          <section class="Class_LeftSidebarWrapper" id="ID_LeftSidebarWrapper">
-            <div class="Class_Sidebars">
-              <h3 class="Class_Players" id="ID_Player_1_Headline"></h3>
-              <span class="Class_Naming_Span">
+        <section id='main__section' data-ingame='no'>
+          <div  id='leftSidebar__wrapper'>
+            <div class='sidebars'>
+              <h2  id='player1__headline'></h2>
+              <span class='naming__span'>
                 <input
-                  type="text"
-                  max="15"
-                  id="ID_Player_1_Name"
-                  name="Player_1_ Name"
+                  type='text'
+                  max='15'
+                  id='player1_name__input'
+                  name='player_1_ Name'
                 />
                 <img
-                  src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci.svg"
-                  id="ID_SVG_Player_1"
-                  class="Class_Player_Name_Buttons"
-                  for="Player_1_Name"
+                  src='./Folder_Graphics/Folder_Icons/simpleicons_org/circleci.svg'
+                  id='player1_name_svg'
+                  class='name_svgs'
+                  for='player_1_Name'
                 />
               </span>
             </div>
-          </section>
-
-          <section class="Class_RightSidebarWrapper" id="ID_RightSidebarWrapper">
-            <div class="Class_Sidebars">
-              <h3 class="Class_Players" id="ID_Player_2_Headline"></h3>
-              <span class="Class_Naming_Span">
-                <img
-                  src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci _GESPIEGELTxcf.png"
-                  id="ID_SVG_Player_2"
-                  class="Class_Player_Name_Buttons"
-                  for="Player_2_Name"
-                />
-                <input
-                  type="text"
-                  max="15"
-                  id="ID_Player_2_Name"
-                  name="Player_2_ Name"
-                />
-              </span>
-            </div>
-          </section>
-        </div>
-
-        <footer class="Class_FooterWrapper" id="ID_FooterWrapper">
-          <div id="ID_Choose_KI_Div">
-            <h6 id="ID_Play_Against"></h6>
-            <select name="Choose_KI" id="ID_Choose_KI">
-              <option value="No" id="ID_No"></option>
-              <option value="CPU Easy" id="ID_Easy_Text" selected></option>
-              <option value="CPU Normal" id="ID_Normal_Text"></option>
-            </select>
           </div>
-          <button type="button" id="ID_Start_Button" class="Buttons"></button>
-        </footer>
 
-        <div  id="ID_Settings_Menu">
-          <span id="ID_Setting_Span" data-endscreen="no">
-            <div id="ID_Info_Container">
-              <h3 id="ID_Info"></h3>
+          <div id='sidebarRight__wrapper'>
+            <div class='sidebars'>
+              <h2  id='player2__headline'></h2>
+              <span class='naming__span'>
+                <img
+                  src='./Folder_Graphics/Folder_Icons/simpleicons_org/circleci _GESPIEGELTxcf.png'
+                  id='player2_name_svg'
+                  class='name_svgs'
+                  for='player_2_Name'
+                />
+                <input
+                  type='text'
+                  max='15'
+                  id='player2_name__input'
+                  name='player_2_ Name'
+                />
+              </span>
             </div>
-            <span id="ID_Gameboard_Span" data-ingame="no" data-gamend="no">
-              <h3 id="ID_Gameboard_h"></h3>
-            <div id="ID_Gameboard_Size_Container">
-              <input type="number" name="gameboard_size_x" id="ID_Gameboard_Size_X" min="1" max="14" placeholder="1-14" value="7"/>
-              <input type="number" name="gameboard_size_y" id="ID_Gameboard_Size_Y" min="1" max="14" placeholder="1-14" value="6"/>
-              <button id="ID_Gameboard_Size_Button"></button>
+          </div>
+        </section>
+
+        <section  id='settings_menu__section'>
+          <span id='settings_span' data-endscreen='no'>
+            <h2 id='settings_menu__headline'></h2>
+
+              <h3 id='info_h'></h3>
+
+            <span id='settings_span__gameboard' data-ingame='no' data-gamend='no'>
+              <h3 id='settings_gameboard_h'></h3>
+            <div id='container_settings_gameboard_sizing'>
+              <input type='number' name='gameboard_size_x' id='settings_gameboard_sizeX' min='4' max='50' placeholder='1-14' value='7'/>
+              <input type='number' name='gameboard_size_y' id='settings_gameboard_sizeY' min='4' max='50' placeholder='1-14' value='6'/>
+              <button id='settings_gameboard_button'></button>
             </div>
           </span>
 
-          <span id="ID_Mechanic_Settings">
-            <div id="ID_Colour_Container">
-              <h3 id="ID_Label_Colour"></h3>
-              <div class="Class_Colour_Toggle">
-                <span class="Class_Colour_Slider" id="ID_Colour_Slider"
-                  ><div id="ID_Toggle_Button"></div
+          <span id='span_settings_mechanics'>
+            <div id='container_colour'>
+              <h3 id='colour_h'></h3>
+              <div class='container_colour_toggle'>
+                <span id='colour_slider'
+                  ><div id='button__toggle'></div
                 ></span>
               </div>
             </div>
-            <div id="ID_Sound_Container">
-              <h3 id="ID_Sound"></h3>
-              <input type="checkbox" id="ID_Sound_Checkbox" />
+            <div id='container__sound'>
+              <h3 id='h__sound'></h3>
+              <input type='checkbox' id='checkbox__sound' />
             </div>
-            <div id="ID_Language_Container">
-              <h3 id="ID_Language"></h3>
-              <select name="LanguageMenu" id="ID_Language_Menu">
-                <option value="Deutsch" id="ID_German" selected>Deutsch</option>
-                <option value="English" id="ID_English">English</option>
+            <div id='container__language'>
+              <h3 id='h__language'></h3>
+              <select name='LanguageMenu' id='select__language'>
+                <option value='Deutsch'  selected>Deutsch</option>
+                <option value='English'>English</option>
               </select>
             </div>
           </span>
-            <div id="ID_Stats_Container">
-              <h4 id="ID_Stats"></h4>
-              <div class="Class_StatsWrapper" id="ID_Stats_First_Wrapper">
-                <h5 id="ID_Stats_Summary_Easy"></h5>
-                <details class="Class_Summary_Details">
-                  <summary id="ID_Stats_Easy"></summary>
-                  <span class="Class_Settings_Summarys"
-                    ><p id="ID_Easy_1">0</p>
+
+            <div id='container__stats'>
+              <h3 id='h__stats'></h3>
+              <div  id='wrapper__stats_easy'>
+                <h4 id='h__stats_easy'></h4>
+                <details class='summary__details'>
+                  <summary id='stats_easy'></summary>
+                  <span class='span_stats'
+                    ><p id='easy_wins'>0</p>
                     /
-                    <p id="ID_Easy_2">0</p>
+                    <p id='easy_draw'>0</p>
                     /
-                    <p id="ID_Easy_3">0</p></span
+                    <p id='easy_loose'>0</p></span
                   >
-                  <button id="ID_Reset_Easy" class="Class_Reset_Buttons">
+                  <button id='reset__easy'>
                     Reset CPU Easy
                   </button>
                 </details>
               </div>
-              <div class="Class_StatsWrapper" id="ID_Stats_Second_Wrapper">
-                <h5>Normal</h5>
-                <details class="Class_Summary_Details">
-                  <summary id="ID_Stats_Normal"></summary>
-                  <span class="Class_Settings_Summarys"
-                    ><p id="ID_Normal_1">0</p>
+              <div  id='wrapper__stats_normal'>
+                <h4>Normal</h4>
+                <details class='summary__details'>
+                  <summary id='stats_normal'></summary>
+                  <span class='span_stats'>
+                    <p id='normal_wins'>0</p>
                     /
-                    <p id="ID_Normal_2">0</p>
+                    <p id='normal_draw'>0</p>
                     /
-                    <p id="ID_Normal_3">0</p></span
-                  >
-                  <button id="ID_Reset_Normal" class="Class_Reset_Buttons">
+                    <p id='normal_loose'>0</p>
+                  </span>
+                  <button id='reset__normal'>
                     Reset CPU Normal
                   </button>
                 </details>
               </div>
             </div>
-            <div id="ID_Contacts_Container">
-              <h3 id="ID_Contact"></h3>
+
+            <div id='container__contacts'>
+              <h3 id='h__contact'></h3>
             </div>
-            <div id="ID_Credits_Container">
-              <h3 id="ID_Credits"></h3>
+            <div id='container__credits'>
+              <h3 id='h__credits'></h3>
             </div>
-            <div id="ID_Delete_All_Container">
-              <button id="ID_Delete_All"></button>
+
+            <div id='container__delete'>
+              <button id='button__delete'></button>
             </div>
           </span>
-        </div>
+        </section>
+
+        <footer  id='footer'>
+          <div id='choosing_cpu'>
+            <h3 id='choosing_cpu_headline'></h3>
+            <select name='choose_cpu__select' id='choosing_cpu__select'>
+              <option value='No' id='cpu_opt_no'></option>
+              <option value='CPU Easy' id='cpu_easy' selected></option>
+              <option value='CPU Normal' id='cpu_normal'></option>
+            </select>
+          </div>
+          <button  id='start__button'></button>
+        </footer>
 
   <!-- #region Javascript-Files-->
     <script
-      type="text/javascript"
-      src="Folder_Javascript/domElements.js"
+      type='text/javascript'
+      src='Folder_Javascript/domElements.js'
     ></script>
-    <script type="text/javascript" src="Folder_Javascript/function_library.js"></script>
+    <script type='text/javascript' 
+    src='Folder_Javascript/function_library.js'>
+  </script>
     <script
-      type="text/javascript"
-      src="Folder_Javascript/screen_changes.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="Folder_Javascript/validation.js"
+      type='text/javascript'
+      src='Folder_Javascript/screen_changes.js'
     ></script>
     <script
-      type="text/javascript"
-      src="Folder_Javascript/cpu_player.js"
+      type='text/javascript'
+      src='Folder_Javascript/validation.js'
     ></script>
     <script
-      type="text/javascript"
-      src="Folder_Javascript/translation.js"
+      type='text/javascript'
+      src='Folder_Javascript/cpu_player.js'
     ></script>
-    <script type="text/javascript" src="Folder_Javascript/script.js"></script>
+    <script
+      type='text/javascript'
+      src='Folder_Javascript/translation.js'
+    ></script>
+    <script type='text/javascript' src='Folder_Javascript/script.js'></script>
     <!-- #endregion -->
   
   </body>
