--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ todo        -) Comment and Style it
 <!DOCTYPE html>
 <html lang='en'>
   <head>
-    <title id='ID_Head_Title'></title>
+    <title id='page__title'></title>
     <!-- Javascript und CSS Dateieinbindung -->
     <link rel='stylesheet' type='text/css' href='Folder_CSS/style.css' />
     <!-- Favicon & AppleTouch-->
