Colour toggle updated

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ todo        -) Comment and Style it
           <span id='span_settings_mechanics'>
             <div id='container_colour'>
               <h3 id='colour_h'></h3>
-              <div class='container_colour_toggle'>
+              <div id='container__toggleColour'>
                 <span id='colour_slider'
                   ><div id='button__toggle'></div
                 ></span>
