--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 />
               </span>
             </div>
-            <div id="choosing_cpu">
+            <div id="wrapper__choosingCPU">
               <h3 id="choosing_cpu_headline"></h3>
               <select name="choose_cpu__select" id="select__choosing_cpu">
                 <option value="No" id="cpu_opt_no"></option>
