--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           </div>
         </section>
 
-        <section  id="section__settings_menu">
-          <span id="settings_span" data-endscreen="no">
+        <section  id="section__settings_menu" data-device="default">
+          <span id="settings_span" data-endscreen="no" data-device="default">
             <h2 id="settings_menu__headline"></h2>
 
               <h3 id="info_h"></h3>
