--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <option value="CPU Easy" id="cpu_easy" selected></option>
                 <option value="CPU Normal" id="cpu_normal"></option>
               </select>
-              <button  id="button__start"></button>
+              <button  id="button__start" onclick="Game_Preparations()"></button>
             </div>
         
           </div>
