--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
     />
     <!-- Metadaten  -->
     <meta name="author" content="Stefan Bartl" />
-    <meta
-      name="description"
-      content="Online-Version of the well knowed family Game "Four-Wins". Play it against friends or CPU!"
-    />
+    <meta name="description" content="Online-Version of the well knowed family
+    Game "Four-Wins". Play it against friends or CPU!" />
     <meta
       name="keywords"
       content="Game, Browsergame, Spiel, Browserspiel, Four, Four Wins, 4, Vier, 4 Gewinnt"
@@ -30,162 +28,176 @@
   </head>
 
   <body>
+    <header>
+      <h1 id="headline"></h1>
+      <p id="p__headline"></p>
+    </header>
 
-        <header>
-          <h1 id="headline"></h1>
-          <p id="p__headline"></p>
-        </header>
+    <section id="section__main" data-ingame="no">
+      <div id="wrapper__leftSidebar">
+        <div class="sidebars">
+          <h2 id="player1__headline"></h2>
+          <span class="naming__span">
+            <input
+              type="text"
+              max="18"
+              id="input__player1_name"
+              name="player_1_ Name"
+            />
+            <img
+              src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci.svg"
+              id="player1_name_svg"
+              class="name_svgs"
+              for="player_1_Name"
+            />
+          </span>
+        </div>
+        <div id="wrapper__choosingCPU">
+          <h3 id="choosing_cpu_headline"></h3>
+          <select name="choose_cpu__select" id="select__choosing_cpu">
+            <option value="No" id="cpu_opt_no"></option>
+            <option value="CPU Easy" id="cpu_easy" selected></option>
+            <option value="CPU Normal" id="cpu_normal"></option>
+          </select>
+          <button id="button__start" onclick="Game_Preparations()"></button>
+        </div>
+      </div>
 
-        <section id="section__main" data-ingame="no">
-          <div  id="wrapper__leftSidebar">
-            <div class="sidebars">
-              <h2  id="player1__headline"></h2>
-              <span class="naming__span">
-                <input
-                  type="text"
-                  max="18"
-                  id="input__player1_name"
-                  name="player_1_ Name"
-                />
-                <img
-                  src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci.svg"
-                  id="player1_name_svg"
-                  class="name_svgs"
-                  for="player_1_Name"
-                />
-              </span>
-            </div>
-            <div id="wrapper__choosingCPU">
-              <h3 id="choosing_cpu_headline"></h3>
-              <select name="choose_cpu__select" id="select__choosing_cpu">
-                <option value="No" id="cpu_opt_no"></option>
-                <option value="CPU Easy" id="cpu_easy" selected></option>
-                <option value="CPU Normal" id="cpu_normal"></option>
-              </select>
-              <button  id="button__start" onclick="Game_Preparations()"></button>
-            </div>
-        
+      <div id="wrapper__rightSidebar">
+        <div class="sidebars">
+          <h2 id="player2__headline"></h2>
+          <span class="naming__span">
+            <input
+              type="text"
+              max="18"
+              id="input__player2_name"
+              name="player_2_ Name"
+            />
+            <img
+              src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci _GESPIEGELTxcf.png"
+              id="player2_name_svg"
+              class="name_svgs"
+              for="player_2_Name"
+            />
+          </span>
+        </div>
+      </div>
+    </section>
+
+    <section id="section__settings_menu" data-device="default">
+      <span id="settings_span" data-endscreen="no" data-device="default">
+        <h2 id="settings_menu__headline"></h2>
+
+        <h3 id="info_h"></h3>
+
+        <span id="settings_span__gameboard" data-ingame="no" data-gamend="no">
+          <h3 id="settings_gameboard_h"></h3>
+          <div id="container_settings_gameboard_sizing">
+            <input
+              type="number"
+              name="gameboard_size_x"
+              id="settings_gameboard_sizeX"
+              min="4"
+              max="50"
+              placeholder="1-50"
+              value="7"
+            />
+            <input
+              type="number"
+              name="gameboard_size_y"
+              id="settings_gameboard_sizeY"
+              min="4"
+              max="50"
+              placeholder="1-50"
+              value="6"
+            />
+            <button id="settings_gameboard_button"></button>
           </div>
+        </span>
 
-          <div id="wrapper__rightSidebar">
-            <div class="sidebars">
-              <h2  id="player2__headline"></h2>
-              <span class="naming__span">
-                <img
-                  src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci _GESPIEGELTxcf.png"
-                  id="player2_name_svg"
-                  class="name_svgs"
-                  for="player_2_Name"
-                />
-                <input
-                  type="text"
-                  max="18"
-                  id="input__player2_name"
-                  name="player_2_ Name"
-                />
-              </span>
+        <span id="span_settings_mechanics">
+          <div id="container_colour">
+            <h3 id="colour_h"></h3>
+            <div id="container__toggleColour">
+              <span id="colour_slider"><div id="button__toggle"></div></span>
             </div>
           </div>
-        </section>
+          <div id="container__sound">
+            <h3 id="h__sound"></h3>
+            <input type="checkbox" id="checkbox__sound" />
+          </div>
+          <div id="container__language">
+            <h3 id="h__language"></h3>
+            <select name="LanguageMenu" id="select__language">
+              <option value="Deutsch" selected>Deutsch</option>
+              <option value="English">English</option>
+            </select>
+          </div>
+          <div id="div__aniToggle">
+            <h3 id="h__aniToggle"></h3>
+            <input
+              type="checkbox"
+              name="aniToggle"
+              id="checkbox__aniToggle"
+              checked
+            />
+          </div>
+        </span>
 
-        <section  id="section__settings_menu" data-device="default">
-          <span id="settings_span" data-endscreen="no" data-device="default">
-            <h2 id="settings_menu__headline"></h2>
+        <div id="container__stats">
+          <h3 id="h__stats"></h3>
+          <div id="wrapper__stats_easy">
+            <h4 id="h__stats_easy"></h4>
+            <details class="summary__details">
+              <summary id="stats_easy"></summary>
+              <span class="span_stats"
+                ><p id="easy_wins">0</p>
+                /
+                <p id="easy_draw">0</p>
+                /
+                <p id="easy_loose">0</p></span
+              >
+              <button id="reset__easy">Reset CPU Easy</button>
+            </details>
+          </div>
+          <div id="wrapper__stats_normal">
+            <h4>Normal</h4>
+            <details class="summary__details">
+              <summary id="stats_normal"></summary>
+              <span class="span_stats">
+                <p id="normal_wins">0</p>
+                /
+                <p id="normal_draw">0</p>
+                /
+                <p id="normal_loose">0</p>
+              </span>
+              <button id="reset__normal">Reset CPU Normal</button>
+            </details>
+          </div>
+        </div>
 
-              <h3 id="info_h"></h3>
+        <div id="container__contacts">
+          <h3 id="h__contact"></h3>
+        </div>
+        <div id="container__credits">
+          <h3 id="h__credits"></h3>
+        </div>
 
-            <span id="settings_span__gameboard" data-ingame="no" data-gamend="no">
-              <h3 id="settings_gameboard_h"></h3>
-            <div id="container_settings_gameboard_sizing">
-              <input type="number" name="gameboard_size_x" id="settings_gameboard_sizeX" min="4" max="50" placeholder="1-14" value="7"/>
-              <input type="number" name="gameboard_size_y" id="settings_gameboard_sizeY" min="4" max="50" placeholder="1-14" value="6"/>
-              <button id="settings_gameboard_button"></button>
-            </div>
-          </span>
+        <div id="container__delete">
+          <button id="button__delete"></button>
+        </div>
+      </span>
+    </section>
 
-          <span id="span_settings_mechanics">
-            <div id="container_colour">
-              <h3 id="colour_h"></h3>
-              <div id="container__toggleColour">
-                <span id="colour_slider"
-                  ><div id="button__toggle"></div
-                ></span>
-              </div>
-            </div>
-            <div id="container__sound">
-              <h3 id="h__sound"></h3>
-              <input type="checkbox" id="checkbox__sound" />
-            </div>
-            <div id="container__language">
-              <h3 id="h__language"></h3>
-              <select name="LanguageMenu" id="select__language">
-                <option value="Deutsch"  selected>Deutsch</option>
-                <option value="English">English</option>
-              </select>
-            </div>
-              <div id="div__aniToggle">
-                <h3 id="h__aniToggle"></h3>
-                <input type="checkbox" name="aniToggle" id="checkbox__aniToggle" checked>
-              </div>
-          </span>
-
-            <div id="container__stats">
-              <h3 id="h__stats"></h3>
-              <div  id="wrapper__stats_easy">
-                <h4 id="h__stats_easy"></h4>
-                <details class="summary__details">
-                  <summary id="stats_easy"></summary>
-                  <span class="span_stats"
-                    ><p id="easy_wins">0</p>
-                    /
-                    <p id="easy_draw">0</p>
-                    /
-                    <p id="easy_loose">0</p></span
-                  >
-                  <button id="reset__easy">
-                    Reset CPU Easy
-                  </button>
-                </details>
-              </div>
-              <div  id="wrapper__stats_normal">
-                <h4>Normal</h4>
-                <details class="summary__details">
-                  <summary id="stats_normal"></summary>
-                  <span class="span_stats">
-                    <p id="normal_wins">0</p>
-                    /
-                    <p id="normal_draw">0</p>
-                    /
-                    <p id="normal_loose">0</p>
-                  </span>
-                  <button id="reset__normal">
-                    Reset CPU Normal
-                  </button>
-                </details>
-              </div>
-            </div>
-
-            <div id="container__contacts">
-              <h3 id="h__contact"></h3>
-            </div>
-            <div id="container__credits">
-              <h3 id="h__credits"></h3>
-            </div>
-
-            <div id="container__delete">
-              <button id="button__delete"></button>
-            </div>
-          </span>
-        </section>
-
-  <!-- #region Javascript-Files-->
+    <!-- #region Javascript-Files-->
     <script
       type="text/javascript"
       src="Folder_Javascript/domElements.js"
     ></script>
-    <script type="text/javascript" 
-    src="Folder_Javascript/function_library.js">
-  </script>
+    <script
+      type="text/javascript"
+      src="Folder_Javascript/function_library.js"
+    ></script>
     <script
       type="text/javascript"
       src="Folder_Javascript/screen_changes.js"
@@ -204,6 +216,5 @@
     ></script>
     <script type="text/javascript" src="Folder_Javascript/script.js"></script>
     <!-- #endregion -->
-  
   </body>
 </html>
