Folder structure update

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <title id="title__page"></title>
     <!-- Javascript und CSS Dateieinbindung -->
-    <link rel="stylesheet" type="text/css" href="Folder_CSS/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <!-- Favicon & AppleTouch-->
     <link
       rel="icon"
       sizes="16x16"
-      href="Folder_Graphics/Folder_Icons/pb_200x200.ico"
+      href="graphics/icons/pb_200x200.ico"
     />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="Folder_Graphics/Folder_Icons/pb_200x200.png"
+      href="graphics/icons/pb_200x200.png"
     />
     <!-- Metadaten  -->
     <meta name="author" content="Stefan Bartl" />
@@ -45,7 +45,7 @@
               name="player_1_ Name"
             />
             <img
-              src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci.svg"
+              src="./graphics/icons/simpleicons_org/circleci.svg"
               id="player1_name_svg"
               class="name_svgs"
               for="player_1_Name"
@@ -74,7 +74,7 @@
               name="player_2_ Name"
             />
             <img
-              src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci _GESPIEGELTxcf.png"
+              src="./graphics/icons/simpleicons_org/circleci _GESPIEGELTxcf.png"
               id="player2_name_svg"
               class="name_svgs"
               for="player_2_Name"
@@ -192,29 +192,29 @@
     <!-- #region Javascript-Files-->
     <script
       type="text/javascript"
-      src="Folder_Javascript/domElements.js"
+      src="javascript/domElements.js"
     ></script>
     <script
       type="text/javascript"
-      src="Folder_Javascript/function_library.js"
+      src="javascript/function_library.js"
     ></script>
     <script
       type="text/javascript"
-      src="Folder_Javascript/screen_changes.js"
+      src="javascript/screen_changes.js"
     ></script>
     <script
       type="text/javascript"
-      src="Folder_Javascript/validation.js"
+      src="javascript/validation.js"
     ></script>
     <script
       type="text/javascript"
-      src="Folder_Javascript/cpu_player.js"
+      src="javascript/cpu_player.js"
     ></script>
     <script
       type="text/javascript"
-      src="Folder_Javascript/translation.js"
+      src="javascript/translation.js"
     ></script>
-    <script type="text/javascript" src="Folder_Javascript/script.js"></script>
+    <script type="text/javascript" src="javascript/script.js"></script>
     <!-- #endregion -->
   </body>
 </html>
